--- a/main.css
+++ b/main.css
@@ -4,3 +4,4 @@
 @import url("/components/pages/product/navbar.css");
 @import url("/components/pages/product/searchbar.css");
 @import url("/components/pages/product/product.css");
+@import url("/components/pages/product/cart.css");
