--- a/style.css
+++ b/style.css
@@ -35,3 +35,10 @@ a {
   gap: 5rem;
   margin-bottom: 8rem;
 }
+.border-round{
+    border-radius: 50%;
+  }
+  .space-sm-top{
+    margin-top:5rem
+  }
+  
