product.html modified

--- a/components/pages/product/product.html
+++ b/components/pages/product/product.html
@@ -328,11 +328,11 @@
     </div>
 
     <footer class="footer">
-        <div class="footer-container">
+        <div class="d-flex jc-se padding-md-x padding-sm-x">
             <div>
-                <div class="footer-heading">Quick Links</div>
+                <div class="footer-heading font-bold fonts-md ">Quick Links</div>
 
-                <ul class="quick-links">
+                <ul class=" d-flex flex-col list-none margin-sm-y fonts-md">
                     <li>
                         <a href="/components/Home/home.html">Home</a>
                     </li>
@@ -349,20 +349,21 @@
             </div>
 
             <div>
-                <div class="footer-heading text-center">Connect with me</div>
+                <div class="footer-heading font-bold fonts-md  text-center">Connect with me</div>
 
-                <ul class="social-icons">
+                <ul class=" list-none d-flex margin-sm-y">
                     <li>
-                        <a href=""> <i class="fab fa-github"></i></a>
+                        <a href="/ https://github.com/Lokeshkhati"> <i class="fab fa-github  fonts-md"></i></a>
                     </li>
                     <li>
-                        <a href=""> <i class="fab fa-linkedin"></i></a>
+                        <a href="https://www.linkedin.com/in/lokesh-khati/"> <i
+                                class="fab fa-linkedin  fonts-md"></i></a>
                     </li>
                     <li>
-                        <a href=""> <i class="fab fa-twitter"></i></a>
+                        <a href="https://twitter.com/LOKESHKHATI12"> <i class="fab fa-twitter  fonts-md"></i></a>
                     </li>
                     <li>
-                        <a href=""> <i class="fab fa-instagram"></i></a>
+                        <a href="#"> <i class="fab fa-instagram  fonts-md"></i></a>
                     </li>
                 </ul>
             </div>
