--- a/components/pages/auth/login.html
+++ b/components/pages/auth/login.html
@@ -12,26 +12,26 @@
 </head>
 
 <body>
-    
+
     <nav class="nav d-flex jc-sb align-ctr">
-        <a href="/components/Home/home.html" class="logo font-lg ">
+        <a href="/components/pages/homepage/home.html" class="logo font-lg ">
             Fashionkart
         </a>
         <ul class="nav-links list-none ">
             <li>
-                <a href="/components/Home/home.html" class="fonts-md margin-sm">Home</a>
+                <a href="/components/pages/homepage/home.html" class="fonts-md margin-sm">Home</a>
             </li>
             <li>
-                <a href="/components/Product/product.html" class="fonts-md margin-sm">Products</a>
+                <a href="/components/pages/product/product.html" class="fonts-md margin-sm">Products</a>
             </li>
             <li>
-                <a href="/components/Wishlist/wishlist.html" class="fonts-md margin-sm">Wishlist</a>
+                <a href="/components/pages/wishlist/wishlist.html" class="fonts-md margin-sm">Wishlist</a>
             </li>
             <li>
-                <a href="/components/Cart/cart.html" class="fonts-md margin-sm">Cart</a>
+                <a href="/components/pages/cart/cart.html" class="fonts-md margin-sm">Cart</a>
             </li>
             <li>
-                <a href="/components/Login/Login.html" class="fonts-md margin-sm">Login</a>
+                <a href="/components/pages/auth/login.html" class="fonts-md margin-sm">Login</a>
 
             </li>
         </ul>
