--- a/components/pages/wishlist/wishlist.html
+++ b/components/pages/wishlist/wishlist.html
@@ -16,33 +16,33 @@
 <body>
     <!-- NAVBAR -->
     <nav class="nav d-flex jc-sb align-ctr">
-        <a href="/components/Home/home.html" class="logo font-lg">
+        <a href="/components/pages/homepage/home.html" class="logo font-lg">
             Fashionkart
         </a>
         <ul class="nav-links  list-none  d-flex">
             <li>
-                <a href="/components/Home/home.html" class="fonts-md margin-sm">Home</a>
+                <a href="/components/pages/homepage/home.html" class="fonts-md margin-sm">Home</a>
             </li>
             <li>
-                <a href="./product.html" class="fonts-md margin-sm">Products</a>
+                <a href="/components/pages/product/product.html" class="fonts-md margin-sm">Products</a>
             </li>
             <li>
-                <a href="/components/Wishlist/wishlist.html" class="fonts-md margin-sm">Wishlist</a>
+                <a href="/components/pages/wishlist/wishlist.html" class="fonts-md margin-sm">Wishlist</a>
             </li>
             <li>
-                <a href="/components/Cart/cart.html" class="fonts-md margin-sm">Cart</a>
+                <a href="/components/pages/cart/cart.html" class="fonts-md margin-sm">Cart</a>
             </li>
         </ul>
         <!-- nav-icons -->
         <ul class="nav-icons list-none ">
             <li>
-                <a href="/components/Wishlist/wishlist.html" class="margin-md-r ">
+                <a href="/components/pages/wishlist/wishlist.html" class="margin-md-r ">
                     <i class="fas fa-heart "></i>
                 </a>
                 <div class="whislist-item profile margin-md-r font-sm text-center"> 4</div>
             </li>
             <li>
-                <a href="/components/Cart/cart.html" class="margin-md-r ">
+                <a href="/components/pages/cart/cart.html" class="margin-md-r ">
                     <i class="fas fa-shopping-cart"></i>
                 </a>
                 <div class="whislist-item profile margin-md-r font-sm text-center"> 3</div>
@@ -178,41 +178,44 @@
     </div>
 
     <footer class="footer">
-        <div class="footer-container">
+        <div class="d-flex jc-se padding-md-x padding-sm-x">
             <div>
-                <div class="footer-heading">Quick Links</div>
+                <div class="footer-heading font-bold fonts-md ">Quick Links</div>
 
-                <ul class="quick-links">
+                <ul class=" d-flex flex-col list-none margin-sm-y fonts-md">
                     <li>
-                        <a href="/components/Home/home.html">Home</a>
+                        <a href="/components/pages/homepage/home.html">Home</a>
                     </li>
                     <li>
-                        <a href="/components/Product/product.html">Products</a>
+                        <a href="/components/pages/product/product.html">Products</a>
                     </li>
                     <li>
-                        <a href="/components/Cart/cart.html">My Cart</a>
+                        <a href="/components/pages/cart/cart.html">My Cart</a>
                     </li>
                     <li>
-                        <a href="/components/Wishlist/wishlist.html">My Wish List</a>
+                        <a href="/components/pages/wishlist/wishlist.html">My Wish List</a>
                     </li>
                 </ul>
             </div>
 
             <div>
-                <div class="footer-heading text-center">Connect with me</div>
+                <div class="footer-heading font-bold fonts-md  text-center">Connect with me</div>
 
-                <ul class="social-icons">
+                <ul class=" list-none d-flex margin-sm-y">
                     <li>
-                        <a href="/"> <i class="fab fa-github"></i></a>
+                        <a href="/ https://github.com/Lokeshkhati" target="blank"> <i
+                                class="fab fa-github  fonts-md"></i></a>
                     </li>
                     <li>
-                        <a href=""> <i class="fab fa-linkedin"></i></a>
+                        <a href="https://www.linkedin.com/in/lokesh-khati/" target="blank"> <i
+                                class="fab fa-linkedin  fonts-md"></i></a>
                     </li>
                     <li>
-                        <a href=""> <i class="fab fa-twitter"></i></a>
+                        <a href="https://twitter.com/LOKESHKHATI12" target="blank"> <i
+                                class="fab fa-twitter  fonts-md"></i></a>
                     </li>
                     <li>
-                        <a href=""> <i class="fab fa-instagram"></i></a>
+                        <a href="#"> <i class="fab fa-instagram  fonts-md  " target="blank"></i></a>
                     </li>
                 </ul>
             </div>
