--- a/components/pages/homepage/home.html
+++ b/components/pages/homepage/home.html
@@ -15,24 +15,24 @@
 
 <body>
     <nav class="nav d-flex jc-sb align-ctr">
-        <a href="/components/Home/home.html" class="logo font-lg">
+        <a href="/components/pages/homepage/home.html" class="logo font-lg">
             Fashionkart
         </a>
         <ul class="nav-links list-none ">
             <li>
-                <a href="/components/Home/home.html" class="fonts-md margin-sm">Home</a>
+                <a href="/components/pages/homepage/home.html" class="fonts-md margin-sm">Home</a>
             </li>
             <li>
-                <a href="/components/Product/product.html" class="fonts-md margin-sm">Products</a>
+                <a href="/components/pages/product/product.html" class="fonts-md margin-sm">Products</a>
             </li>
             <li>
-                <a href="/components/Wishlist/wishlist.html" class="fonts-md margin-sm">Wishlist</a>
+                <a href="/components/pages/wishlist/wishlist.html" class="fonts-md margin-sm">Wishlist</a>
             </li>
             <li>
-                <a href="/components/Cart/cart.html" class="fonts-md margin-sm">Cart</a>
+                <a href="/components/pages/cart/cart.html" class="fonts-md margin-sm">Cart</a>
             </li>
             <li>
-                <a href="/components/Login/Login.html" class="fonts-md margin-sm">Login</a>
+                <a href="/components/pages/auth/login.html" class="fonts-md margin-sm">Login</a>
 
             </li>
         </ul>
@@ -251,16 +251,16 @@
 
                 <ul class=" d-flex flex-col list-none margin-sm-y fonts-md">
                     <li>
-                        <a href="/components/Home/home.html">Home</a>
+                        <a href="/components/pages/homepage/home.html">Home</a>
                     </li>
                     <li>
-                        <a href="/components/Product/product.html">Products</a>
+                        <a href="/components/pages/product/product.html">Products</a>
                     </li>
                     <li>
-                        <a href="/components/Cart/cart.html">My Cart</a>
+                        <a href="/components/pages/cart/cart.html">My Cart</a>
                     </li>
                     <li>
-                        <a href="/components/Wishlist/wishlist.html">My Wish List</a>
+                        <a href="/components/pages/wishlist/wishlist.html">My Wish List</a>
                     </li>
                 </ul>
             </div>
@@ -270,17 +270,19 @@
 
                 <ul class=" list-none d-flex margin-sm-y">
                     <li>
-                        <a href="/ https://github.com/Lokeshkhati"> <i class="fab fa-github  fonts-md"></i></a>
+                        <a href="/ https://github.com/Lokeshkhati" target="blank"> <i
+                                class="fab fa-github  fonts-md"></i></a>
                     </li>
                     <li>
-                        <a href="https://www.linkedin.com/in/lokesh-khati/"> <i
+                        <a href="https://www.linkedin.com/in/lokesh-khati/" target="blank"> <i
                                 class="fab fa-linkedin  fonts-md"></i></a>
                     </li>
                     <li>
-                        <a href="https://twitter.com/LOKESHKHATI12"> <i class="fab fa-twitter  fonts-md"></i></a>
+                        <a href="https://twitter.com/LOKESHKHATI12" target="blank"> <i
+                                class="fab fa-twitter  fonts-md"></i></a>
                     </li>
                     <li>
-                        <a href="#"> <i class="fab fa-instagram  fonts-md"></i></a>
+                        <a href="#"> <i class="fab fa-instagram  fonts-md" target="blank"></i></a>
                     </li>
                 </ul>
             </div>
