--- a/style.css
+++ b/style.css
@@ -35,12 +35,13 @@ a {
   gap: 5rem;
   margin-bottom: 8rem;
 }
-.border-round{
-    border-radius: 50%;
-  }
-  .space-sm-top{
-    margin-top:5rem
-  }
-  
+.border-round {
+  border-radius: 50%;
+}
+.space-sm-top {
+  margin-top: 5rem;
+}
 
-
+.full-width {
+  width: 100%;
+}
