--- a/components/pages/auth/sighnup.html
+++ b/components/pages/auth/sighnup.html
@@ -14,12 +14,12 @@
 <body>
 
     <nav class="nav d-flex jc-sb align-ctr">
-        <a href="/components/pages/homepage/home.html" class="logo font-lg ">
+        <a href="/index.html" class="logo font-lg ">
             Fashionkart
         </a>
         <ul class="nav-links list-none ">
             <li>
-                <a href="/components/pages/homepage/home.html" class="fonts-md margin-sm">Home</a>
+                <a href="/index.html" class="fonts-md margin-sm">Home</a>
             </li>
             <li>
                 <a href="/components/pages/product/product.html" class="fonts-md margin-sm">Products</a>
@@ -79,7 +79,7 @@
             </form>
             <div class="text-center">
                 Already have an account
-                <a href="/components/Login/Login.html" class="join-now">
+                <a href="/components/pages/auth/login.html" class="join-now">
                     Sign in
                 </a>
             </div>
