--- a/components/pages/auth/login.html
+++ b/components/pages/auth/login.html
@@ -14,12 +14,12 @@
 <body>
 
     <nav class="nav d-flex jc-sb align-ctr">
-        <a href="/components/pages/homepage/home.html" class="logo font-lg ">
+        <a href="/index.html" class="logo font-lg ">
             Fashionkart
         </a>
         <ul class="nav-links list-none ">
             <li>
-                <a href="/components/pages/homepage/home.html" class="fonts-md margin-sm">Home</a>
+                <a href="/index.html" class="fonts-md margin-sm">Home</a>
             </li>
             <li>
                 <a href="/components/pages/product/product.html" class="fonts-md margin-sm">Products</a>
@@ -69,7 +69,7 @@
             </form>
             <div class="text-center">
                 New to <span class="sm-logo">Fashionkart</span>
-                <a href="/components/Login/SignUp.html" class="join-now padding-sm">
+                <a href="/components/pages/auth/sighnup.html" class="join-now padding-sm">
                     Join now
                 </a>
             </div>
