--- a/components/pages/wishlist/wishlist.html
+++ b/components/pages/wishlist/wishlist.html
@@ -16,12 +16,12 @@
 <body>
     <!-- NAVBAR -->
     <nav class="nav d-flex jc-sb align-ctr">
-        <a href="/components/pages/homepage/home.html" class="logo font-lg">
+        <a href="/index.html" class="logo font-lg">
             Fashionkart
         </a>
         <ul class="nav-links  list-none  d-flex">
             <li>
-                <a href="/components/pages/homepage/home.html" class="fonts-md margin-sm">Home</a>
+                <a href="/index.html" class="fonts-md margin-sm">Home</a>
             </li>
             <li>
                 <a href="/components/pages/product/product.html" class="fonts-md margin-sm">Products</a>
@@ -184,7 +184,7 @@
 
                 <ul class=" d-flex flex-col list-none margin-sm-y fonts-md">
                     <li>
-                        <a href="/components/pages/homepage/home.html">Home</a>
+                        <a href="/index.html">Home</a>
                     </li>
                     <li>
                         <a href="/components/pages/product/product.html">Products</a>
