--- a/components/pages/cart/cart.html
+++ b/components/pages/cart/cart.html
@@ -59,9 +59,11 @@
             </li>
         </ul>
 
-        <button class="hamburger crsr-ptr fonts-md">
-            <i class="fas fa-bars "></i>
-        </button>
+        <div class="hamburger crsr-ptr ">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div>
     </nav>
 
     <main class="main padding-lg">
