--- a/components/pages/product/product.html
+++ b/components/pages/product/product.html
@@ -57,9 +57,11 @@
             </li>
         </ul>
 
-        <button class="hamburger crsr-ptr fonts-md">
-            <i class="fas fa-bars "></i>
-        </button>
+        <div class="hamburger crsr-ptr ">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div>
     </nav>
 
 
