--- a/components/pages/wishlist/wishlist.html
+++ b/components/pages/wishlist/wishlist.html
@@ -56,9 +56,11 @@
             </li>
         </ul>
 
-        <button class="hamburger crsr-ptr fonts-md">
-            <i class="fas fa-bars "></i>
-        </button>
+        <div class="hamburger crsr-ptr ">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div>
     </nav>
 
     <h1 class="wishlist-heading text-center">My Wishlist</h1>
