--- a/components/pages/product/navbar.css
+++ b/components/pages/product/navbar.css
@@ -47,6 +47,9 @@
   .hamburger {
     display: none;
   }
+  .nav-links{
+    display: flex;
+  }
   
   .nav-links a {
     color: var(--dark-color);
